# BirdHouse

./: .flake8  .gitignore  main.py  pyproject.toml  pytest.ini  settings.py
.github/workflows/: deploy.yml
database/: database.py  test_database.py
extra/: birdHouse.ino  motion.conf
logs/: logging_config.ini
messages/: telegram.py  test_telegram.py
settings/: __init__.py  local.py  production.py
